# synapticflow

./: .gitignore  README.md  Test.txt  environment.yml  pyproject.toml
cnsproject/: surrogate.py  utils.py
cnsproject/decision/: __init__.py
cnsproject/encoding/: encoders.py
cnsproject/learning/: __init__.py  learning_rules.py
cnsproject/network/: __init__.py  connections.py  monitors.py  network.py  neural_populations.py
cnsproject/plotting/: visualization.py
docs/: AELIF.md  ALIF.md  AQLIF.md  BoostedLIF.md  Connection (1).md  Connection.md  Connection2.md  Contributing.rst  CurrentLIF.md  ELIF.md  Encoding.md  IF.md  Installation.md  Installation.rst  Introduction.html  Introduction.md  Introduction.rst  Izhikevich.md  LIF.md  Learning_Rules.md  McCullochPitts.md  Network.md  Phase1.html  Phase10.html  Phase2.html  Phase3.html  Phase4.html  Phase5.html  Phase6.html  Phase7.html  Phase8.html  Phase9.html  Plot.md  QLIF.md  README.html  SRM0.md  cnsproject.decision.html  cnsproject.encoding.html  cnsproject.html  cnsproject.learning.html  (+12 more)
docs/_sources/: Phase1.rst.txt  Phase10.rst.txt  Phase2.md.txt  Phase2.rst.txt  Phase3.md.txt  Phase3.rst.txt  Phase4.md.txt  Phase4.rst.txt  Phase5.rst.txt  Phase6.rst.txt  Phase7.rst.txt  Phase8.rst.txt  Phase9.rst.txt  cnsproject.decision.rst.txt  cnsproject.encoding.rst.txt  cnsproject.learning.rst.txt  cnsproject.network.rst.txt  cnsproject.plotting.rst.txt  cnsproject.rst.txt  index.rst.txt  modules.rst.txt  phases.rst.txt
docs/_static/: extra.css
synapticflow/: __init__.py  synapticflow.py
(+12 files in other folders)
